Core features section added.

--- a/index.html
+++ b/index.html
@@ -989,8 +989,8 @@
     </section>
     <!-- main feature section 2 ends here  -->
 
-        <!-- new features starts here  -->
-        <section class="bg-white relative">
+    <!-- new features starts here  -->
+    <section class="bg-white relative">
           <!-- main div starts here  -->
           <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
             <!-- background images for main div-->
@@ -1086,8 +1086,70 @@
             
             </div>
           </div>
-        </section>
-        <!-- new features ended -->
+    </section>
+    <!-- new features ended -->
+
+    <!-- core features starts here  -->
+    <section class="w-full bg-[url(./images/core-features-sectionBg.svg)]  bg-no-repeat bg-cover bg-center mt-14 relative coreFeaturesSection">
+      <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
+        <h2 class="font-mullish text-2xl font-bold text-center text-white ">Features</h2>
+        <div class="w-6 h-1 bg-greenLight m-auto mt-4 mb-6"></div>
+        <p class="font-mullish text-center max-w-[450px] mx-auto text-white ">Empower your business with all the right tools to accept online payments and provide the best customer experience</p>
+
+        <div class="grid grid-cols-4 grid-rows-2 gap-[2rem] mt-8">
+          
+          <!-- box1  -->
+          <div>
+            <img src="./images/instant-activation-icon.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">Instant Activation</h3>
+            <p class="text-white font-mullish opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+          </div>
+          <!-- box2  -->
+          <div>
+            <img src="./images/easy-integration.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">Easy Integration</h3>
+            <p class="text-white font-mullish opacity-80">With plugins for all major platforms and languages, integrate and go live with Razorpay in less than an hour.</p>
+          </div>
+          <!-- box3  -->
+          <div>
+            <img src="./images/api-driven-icon.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">API Driven</h3>
+            <p class="text-white font-mullish opacity-80">Build your business for scale with our complete API-driven automation that requires zero manual intervention.</p>
+          </div>
+          <!-- box4 -->
+          <div>
+            <img src="./images/payment-modes.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">100+ payment modes</h3>
+            <p class="text-white font-mullish opacity-80">Offer your customers the luxury of all payment modes including Credit/Debit cards, Netbanking,UPI, Wallets, etc.</p>
+          </div>
+          <!-- box5 -->
+          <div>
+            <img src="./images/simple-pricing.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">Simple Pricing</h3>
+            <p class="text-white font-mullish opacity-80">Our innovative payment solutions with competitive pricing makes payments simpler.</p>
+          </div>
+          <!-- box6 -->
+          <div>
+            <img src="./images/industry-support-icon.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">Best in Industry Support</h3>
+            <p class="text-white font-mullish opacity-80">Always available email, phone and chat based support to help you in your every step.</p>
+          </div>
+          <!-- box7 -->
+          <div>
+            <img src="./images/dashboard-reporting-icon.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">Dashboard Reporting</h3>
+            <p class="text-white font-mullish opacity-80">Real-time data and insights on your Razorpay Dashboard to make informed business decisions.</p>
+          </div>
+          <!-- box8 -->
+          <div>
+            <img src="./images/secure-icon.svg" alt="Error: img not found!">
+            <h3 class="font-mullish font-bold text-lg my-4 text-white">Secure</h3>
+            <p class="text-white font-mullish opacity-80">PCI DSS Level 1 compliant solution which removes your burden of regulatory compliance.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--core features ends here-->
 
     <script>
       feather.replace();
