--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
     <link rel="stylesheet" href="main.css" />
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+    <style>
+      .coreFeaturesSection{
+        background-size: 100% 100%;
+        padding-top: 12rem;
+        padding-bottom: 12rem;
+      }
+      .companiesList{
+        animation: 10s infinite linear moveImages;
+      }
+
+      @keyframes moveImages {
+        0%{
+          top: 0;
+        }
+        100%{
+          top: -50%;
+        }
+      }
+    </style>
   </head>
   <body>
-    <!-- nav bar -->
+
+    <div class="relative overflow-y-hidden">
+          <!-- nav bar -->
     <nav class="bg-deepBlue">
       <div
         class="relative w-[1080px] mx-auto flex items-center justify-between"
@@ -1150,6 +1171,41 @@
       </div>
     </section>
     <!--core features ends here-->
+
+          <!-- join razorpay section starts here  -->
+          <section class="relative bg-[#f5f8fe] pt-40 pb-12 -mt-[200px] -z-[100]">
+        
+            <!-- parent div  -->
+            <div class="w-11/12 max-w-[1080px] mx-auto relative flex flex-row">
+              <!-- left part    -->
+                <div class="flex flex-col max-w-[calc(100%-500px)] justify-center">
+                  <!-- heading  -->
+                  <h2 class="font-mullish font-bold text-2xl text-deepBlueHead">Join the 50,00,000+ businesses using Razorpay</h2>
+                  <!-- green underline -->
+                  <div class="w-6 h-1 bg-greenLight my-4 mb-10"></div>
+                  <!-- paragraphs  -->
+                  <div class="font-mullish opacity-80">
+                    <p>We make it easier for you to focus on building great products while we work on simplifying your payments. Become one of us by joining thousands of our happy users and simplify the online payment experience for your customers.</p>
+                    <p class="mt-6">Focus on your business while we handle the complexities for you.</p>
+                  </div>
+                </div>
+              <!-- right part  -->
+                <div class="h-[500px] w-[500px] relative overflow-y-hidden">
+                  <!-- gradient for visible to invisible images -->
+                  <div style="background: linear-gradient(180deg, #f4f8ff, #fff0)" 
+                  class="absolute w-full h-[150px] top-0 z-50"></div>
+                  <!-- combined images for the companies   -->
+                  <img src="./images/comanies.png" alt="Error: img not found!" class="absolute h-auto object-cover companiesList">
+                  <!-- gradient for invisible to visible images -->
+                  <div style="background: linear-gradient(0deg, #f4f8ff, #fff0)"
+                  class="absolute w-full h-[150px] bottom-0 z-50"></div>
+                </div>
+            </div>
+          </section>
+          <!-- join razorpay section ends here  -->
+
+    </div>
+
 
     <script>
       feather.replace();
