--- a/index.html
+++ b/index.html
@@ -1204,6 +1204,56 @@
           </section>
           <!-- join razorpay section ends here  -->
 
+                <!-- testimonial section  -->
+      <section class="relative ">
+        <div class="relative w-11/12 max-w-[1300px] mx-auto py-20">
+          <img src="./images/feature-section1-dottedrows.png" alt="Error: img not found" class="absolute w-[200px] top-[8rem] left-[2rem] -z-10">
+          <h2 class="capitalize font-mullish font-extrabold text-2xl text-deepBlueHead text-center">an experience <br>people love to talk about</h2>
+          <div class="w-6 h-1 mx-auto my-4 bg-greenLight"></div>
+        
+        <!-- left button -->
+        <button class="absolute w-[100px] h-[100px] bg-[#f4f8ff] rounded-full left-0 top-1/2 flex justify-center items-center">
+          <div class="absolute w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center items-center mix-blend-multiply">
+            <i data-feather="chevron-right" class="stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400 rotate-180"></i>
+          </div>
+        </button>
+
+        <!-- right button -->
+        <button class="absolute w-[100px] h-[100px] bg-[#f4f8ff] rounded-full right-0 top-1/2 flex justify-center items-center">
+          <div class="absolute w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center items-center mix-blend-multiply">
+            <i data-feather="chevron-right" class="stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400"></i>
+          </div>
+        </button>
+
+        <!-- main content  -->
+        <div class="flex justify-between items-center max-w-[960px] mx-auto my-20 space-x-10">
+          <!-- left part  -->
+          <img src="./images/testimonial.jpg" alt="Error: img not found" loading="lazy" class="w-[320px] h-[320px] rounded-xl">
+          <!-- right part  -->
+          <div class="max-w-[400px]">
+            <img src="./images/quotes.svg" loading="lazy" alt="Error: img not found" class="w-[35px] h-[40px]
+            -mb-2">
+            <p class="capitalize font-mullish text-3xl font-extralight opacity-80">Readymade closed wallet solution for quick refunds</p>
+            <a href="/" class="text-grayText underline italic">Learn More</a>
+            <p class="font-mullish font-extrabold text-2xl">Lorem Ipsum</p>
+            <p class="font-mullish font-medium">CEO, XYZ Engineering Company</p>
+            <img src="./images/fake-company-logo.png" alt="Error: img not found"
+            class="w-[80px] h-[40px]">
+          </div>
+
+        </div>
+        
+        <!-- 6 dots div  -->
+        <div class="w-full flex flex-row mx-auto space-x-2 justify-center">
+          <div class="h-[10px] w-[10px] bg-lightBlue300 rounded-full"></div>
+          <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+          <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+          <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+          <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+          <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+      </div>
+      </section>
+
     </div>
 
 
